Start running tests on JDK11.